--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@primeng/themes": "^19.0.9",
     "@tailwindcss/postcss": "^4.0.10",
     "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.10",
     "tslib": "^2.3.0",
