--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "baseHref": "/ERP-SYSTEM",
             "outputPath": "docs",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -47,8 +46,7 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all",
-              "baseHref": "/ERP-SYSTEM/"
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
@@ -92,6 +90,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
